# Finch

./: .gitignore  DELIVERABLES.md  README.md  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: adjudicate.py  chunking.py  config.py  courtlistener.py  coverage.py  escalate.py  extraction.py  graph.py  ingest.py  llm.py  main.py  metadata.py  models.py  quotecheck.py  ratelimit.py  rerank.py  routes.py  services.py  vectorstore.py
backend/eval/: ablation.py  clcache.py  embcache.py  generate.py  harness.py  human_audit.py  ragas_eval.py  refine.py  report.py  rescore.py  schema.py  seed_cases.py  seed_fetch.py  split.py  stats.py  warm_cache.py
backend/eval/data/: briefbench_v2.jsonl  briefbench_v2_dev.jsonl  briefbench_v2_holdout.jsonl  label_report.json  seeds_v2.json
backend/tests/: test_adjudicate.py  test_chunking.py  test_courtlistener.py  test_coverage.py  test_escalate.py  test_extraction.py  test_generate.py  test_graph.py  test_harness.py  test_health.py  test_ingest.py  test_llm.py  test_metadata.py  test_models.py  test_quotecheck.py  test_ratelimit.py  test_rerank.py  test_routes.py  test_split.py  test_stats.py  test_vectorstore.py
docs/: stack.md
examples/: demo_brief.txt  sample_brief.txt  verified_brief.txt
frontend/: .env.example  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: chat-panel.tsx  report-table.tsx  verdict-badge.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
frontend/lib/: types.ts
(+1 files in other folders)
