[project]
name = "finch-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "qdrant-client>=1.11",
    "eyecite>=2.6",
    "rapidfuzz>=3.9",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "respx>=0.21",
    "fpdf2>=2.7",
    "ruff>=0.5",
]
eval = [
    "ragas>=0.2,<0.3",
    "datasets>=2.16",
    "pandas>=2.0",
    "langchain-community>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
